--- a/style.css
+++ b/style.css
@@ -115,9 +115,12 @@ button{
     left: 10px;
 }
 
-.choix-produit{
+.img-produit{
+    margin-top: 30px;
     width : 180px;
-    justify-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h2{
@@ -125,6 +128,13 @@ h2{
     font-weight: 100;
 }
 
+.total{
+    font-weight: 900;
+    font-family: 'Barlow Condensed', sans-serif;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    font-size: 20px;
+}
 
 input{
     display: block;
@@ -158,6 +168,12 @@ footer{
     text-transform: uppercase;
 }
 
+.offres a{
+    text-decoration: none;
+    color: #FFFFFF;
+    display: block;
+}
+
 hr{
     margin: auto;
     color: #7E7E7E;
@@ -183,4 +199,9 @@ hr{
     letter-spacing: 0.8px;
     text-transform: none;
     font-weight: 100;
+}
+
+.others a{
+    text-decoration: none;
+    color: #7E7E7E;
 }
