--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ button{
 
 .img-produit{
     margin-top: 30px;
+    width: 180px;
 }
 
 .save {
@@ -179,10 +180,21 @@ footer{
     text-transform: uppercase;
 }
 
+.footer{
+    padding-left: 40px;
+    padding-top: 30px;
+    padding-right: 40px;
+    padding-bottom: 30px;
+}
+
 .offres a{
     text-decoration: none;
     color: #FFFFFF;
     display: block;
+}
+
+.offres{
+    line-height: 3em;
 }
 
 hr{
@@ -192,15 +204,39 @@ hr{
     height: 0.3px;
 }
 
+.social, .position{
+    line-height: 4em;
+}
+
 .picto-rs{
     width : 30px;
     height: 30px;
 	opacity: 1;
 	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 }
 .picto-rs:hover{
 	opacity: .5;
+}
+
+.bloc-aide, .bloc-about{
+    line-height: 4em;
+}
+
+.bloc-aide .gauche {
+    float:left;
+    width:60%;
+}
+.bloc-aide .droite {
+    margin-left:60%   
+}
+
+.bloc-about .gauche {
+    float:left;
+    width:60%;
+}
+.bloc-about.droite {
+    margin-left:60%   
 }
 
 .others{
@@ -210,11 +246,14 @@ hr{
     letter-spacing: 0.8px;
     text-transform: none;
     font-weight: 100;
+    line-height: 4em;
 }
 
 .others a{
     text-decoration: none;
     color: #7E7E7E;
+    display: block;
+    line-height: 3em;
 }
 
 #checkbox {
