--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ h2{
     padding-top: 10px;
     max-width: 435px;
     margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 h3{
@@ -180,10 +181,6 @@ h3{
     letter-spacing: 0.5px;
     text-transform: uppercase;
     font-size: 20px;
-}
-
-input{
-    display: inline-block;
 }
 
 select{
@@ -321,5 +318,10 @@ hr{
     border-color: black;
     border: solid 1.5px;
     justify-content: center;
+    margin-bottom: 10px;
+    padding: 10px;
+}
 
+#checkbox {
+    margin: 10px 0 10px 0;
 }
