--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ button{
     max-width: 500px;
 }
 
+button a{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
 .img-produit{
     margin-top: 30px;
     width: 180px;
