--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ button{
     display: block;
     margin : auto;
     max-width: 500px;
+    margin-top: 30px;
 }
 
 button a{
@@ -223,6 +224,7 @@ footer{
     font-family: 'Barlow Condensed', sans-serif;
     letter-spacing: 0.5px;
     text-transform: uppercase;
+    margin-top: 100px;
 }
 
 .footer{
